# solvook-dify

./: README.md
dify-batch-processor/: Makefile  README.md  pyproject.toml
dify-batch-processor/dispatcher/: config.py  main.py  requirements.txt
dify-batch-processor/loader/: config.py  main.py  requirements.txt
dify-batch-processor/poller/: config.py  main.py  requirements.txt
dify-batch-processor/shared/: utils.py
dify-batch-processor/worker/: config.py  main.py  requirements.txt
terraform/environments/dev/: main.tf  provider.tf  terraform.tfvars  variables.tf
terraform/modules/cloudrun/: logging.tf  main.tf  outputs.tf  variables.tf
terraform/modules/cloudsql/: main.tf
terraform/modules/dify_batch_processor/: main.tf  monitoring.tf  outputs.tf  variables.tf
